# make-toolchain-environment

./: .hgignore  .hgtags  .indent.pro  EIO_value.c  Makefile.am  Makefile.in  README.adoc  aclocal.m4  c_code.c  command_line.adb  command_line.ads  config.h.in  configure  configure.ac  default_regular_expression.ads.in  dist_version.ads.in  gnat.adc.in  make-toolchain-environment  make_toolchain_environment.adb  notification.adb  notification.ads  quasi_copying.adb  quasi_copying.ads  regexp.c  regexp_pcre2.c  regular_expressions.adb  regular_expressions.ads
ATTIC/: make-toolchain-environment
autom4te.cache/: output.0  output.1  output.10  output.11  output.2  output.3  output.4  output.7  output.8  output.9  requests  traces.0  traces.1  traces.10  traces.11  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
nix-helpers/: shell.nix
